# cr39py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/: publish.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
data/: D(D,n)He-3.h5  D(D,p)T.h5
data/calibration/: wrf_calibrations.yml
docs/: requirements.txt
docs/source/: api.rst  bibliography.bib  bibliography.rst  citation.rst  conf.py  contributing.rst  cut.rst  index.rst  installation.rst  response.rst  scan.rst  subset.rst  usage.rst
docs/source/core/: index.rst
docs/source/models/: index.rst  response.rst
docs/source/notebooks/: analyze_wrf.ipynb  applying_cuts_to_a_cpsa_file.ipynb  estimating_proton_yields_from_ntofs.ipynb  filtration_stacks.ipynb  nuclear_reaction_data.ipynb  track_overlap.ipynb  units.ipynb
docs/source/scan/: base_scan.rst  cpsa.rst  cut.rst  index.rst  subset.rst
examples/: analyzing_sample_cpsa_file.ipynb
src/cr39py/: __init__.py  cpsa.py  cut.py  response.py  run_mcmc.ipynb  scan.py  subset.py  track_overlap_mc.py
src/cr39py/core/: __init__.py  ci.py  data.py  exportable_class.py  types.py  units.py
src/cr39py/core/data/cr39/: F1-F4+ special_distribution.h5  (+1 more)
src/cr39py/core/resources/: materials.h5
src/cr39py/etch/: optimize.py  overlap.py  tools.py  track_overlap_mc.py
src/cr39py/filtration/: _layerlike.py  layer.py  material.py  srim.py  stack.py
src/cr39py/models/: __init__.py  fusion.py  response.py
src/cr39py/scan/: __init__.py  base_scan.py  cli.py  coincidence.py  cpsa.py  cut.py  scan.py  subset.py  wrf.py
test_data/: test_alphas.cpsa
tests/: test_cut.py  test_response.py  test_scan.py  test_subset.py
tests/core/: test_exportable_class.py
tests/etch/: test_optimize.py  test_overlap.py  test_tools.py  test_track_overlap_mc.py
tests/filtration/: test_layer.py  test_layerlike.py  test_materials.py  test_srim.py  test_stack.py
tests/models/: test_fusion.py  test_response.py
tests/scan/: test_base_scan.py  test_cpsa.py  test_cut.py  test_scan.py  test_subset.py  test_wrf.py
(+4 files in other folders)
