[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "setuptools-scm >= 6.3.2",
  "wheel >= 0.37.0",
]

[project]
name = "cr39py"
version = "2025.1"
authors = [
  {name = "Peter Heuer"},
  ]
description = "Python package for analyzing CR39 particle track data"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = [
  "CR39",
]


requires-python = ">=3.11"


dependencies = [
    "fast_histogram",
    "flexparser<0.4", # Pin required by pint
    "h5py >= 3.8.0",
    "ipython",
    "matplotlib >= 3.7.0",
    "numpy >= 1.24.0",
    'pint>=0.24.3',
    'scipy>=1.14.1',
    "tqdm >= 4.65.0",
    "setuptools >= 66.0.0",
  ]


[project.optional-dependencies]
tests = [
  "pytest >= 8.3.1",
  ]

docs = [
  "astroid>=3", # RTD issue https://github.com/readthedocs/readthedocs.org/issues/11975
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.codespell]
# Skip ipynb files because executed files have lots of strange symbols in them.
skip = '*.ipynb'
# Add false positives found by codespell to ignore-words-list
ignore-words-list = """
astroid,
hax,
vax"""

[tool.coverage.run]
source = ["src"]
omit = [
  "*/cr39py/tests/*",
]
